so stupid... dark mode shadow fixed

--- a/style.css
+++ b/style.css
@@ -2,40 +2,50 @@
 	box-sizing: border-box;
 	margin: 0px;
 }
+
 b {
 	color: #007AFF
 }
+
 a {
 	color: #007AFF
 }
+
 #topbar {
 	position: fixed;
 	top: 0px;
+	width: 100%;
+	
 	-webkit-backdrop-filter: blur(2.5px);
 	-moz-backdrop-filter: blur(2.5px);
 	backdrop-filter: blur(2.5px);
-	-webkit-box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
-	-moz-box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
-	box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
-	width: 100%;
+	
+	-webkit-box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.25);
+	-moz-box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.25);
+	box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.25);	
 }
+
 #topbarTitle {
 	
 }
+
 .contentPush{
 	height: 60px;
 }
+
 body {
 	background-color: #f2f2f2;
 	color: #222222;
 	font-family: system-ui;
 	height: 100%;
 }
+
 p {
 	font-size: 20px;
 	padding-left: 20px;
 	padding-right: 20px;
 }
+
 h1 {
 	font-size: 45px;
 	font-weight: 750;
@@ -44,6 +54,7 @@ h1 {
 	padding-left: 20px;
 	padding-right: 20px;
 }
+
 h2 {
 	font-size: 35px;
 	font-weight: 300;
@@ -52,6 +63,7 @@ h2 {
 	padding-left: 20px;
 	padding-right: 20px;
 }
+
 h3 {
 	font-size: 25px;
 	font-weight: 200;
@@ -60,20 +72,23 @@ h3 {
 	padding-left: 20px;
 	padding-right: 20px;
 }
+
 @media (prefers-color-scheme: dark) {
 	body {
 		background-color: #1C1C1E;
 		color: #f2f2f2;
 	}
-	.topbar {
-		-webkit-box-shadow: 0px 0px 10px 10px rgba(255,255,255,0.5);
-		-moz-box-shadow: 0px 0px 10px 10px rgba(255,255,255,0.5);
-		box-shadow: 0px 0px 10px 10px rgba(255,255,255,0.5);
+	
+	#topbar {
+		-webkit-box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.25);
+		-moz-box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.25);
+		box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.25);
 	}
 
 	#transaction {
 		background-color: #222222;
 	}
+	
 	p {
 		color: #e6e6e6;
 	}
